[feat] 加上設計篩選功能並加上 swagger docs
