# class-mission/mission4/swagger-output.json
@@ -22,30 +22,182 @@
   "paths": {
     "/posts/": {
       "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": [
+          "Get - 貼文"
+        ],
+        "description": "取得全部貼文 API ",
+        "parameters": [
+          {
+            "name": "timeSortNew",
+            "description": "排序最新貼文",
+            "type": "string",
+            "default": "new",
+            "in": "query"
+          },
+          {
+            "name": "q",
+            "description": "關鍵字搜尋",
+            "type": "string",
+            "default": "羽球",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "貼文資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "64319a9a4df771952c73d411"
+                      },
+                      "content": {
+                        "type": "string",
+                        "example": "今天天氣真好，一起去打羽球"
+                      },
+                      "image": {
+                        "type": "string",
+                        "example": "https://imgur.com/kuYyH1O"
+                      },
+                      "user": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "64319450e15991751968e7c5"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "John"
+                          },
+                          "photo": {
+                            "type": "string",
+                            "example": "https://thumb.fakeface.rest/thumb_male_10_8c02e4e9bdc0e103530691acfca605f18caf1766.jpg"
+                          }
+                        }
+                      },
+                      "likes": {
+                        "type": "number",
+                        "example": 1000
+                      },
+                      "__v": {
+                        "type": "number",
+                        "example": 0
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Posts - 貼文"
+        ],
+        "description": "新增一筆貼文",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "資料格式",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "content": {
-                  "example": "any"
+                "user": {
+                  "type": "string",
+                  "example": "64319450e15991751968e7c5"
                 },
-                "name": {
-                  "example": "any"
+                "content": {
+                  "type": "string",
+                  "example": "今天天氣真好，一起去打羽球"
+                },
+                "image": {
+                  "type": "string",
+                  "example": "https://imgur.com/kuYyH1O"
+                },
+                "likes": {
+                  "type": "number",
+                  "example": 123
                 }
-              }
+              },
+              "required": [
+                "user",
+                "content"
+              ]
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "貼文資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "content": {
+                      "type": "string",
+                      "example": "今天天氣真好，一起去打羽球"
+                    },
+                    "image": {
+                      "type": "string",
+                      "example": "https://imgur.com/kuYyH1O"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2023-04-08T16:47:15.920Z"
+                    },
+                    "user": {
+                      "type": "string",
+                      "example": "64319450e15991751968e7c5"
+                    },
+                    "likes": {
+                      "type": "number",
+                      "example": 0
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "64319a9a4df771952c73d411"
+                    },
+                    "__v": {
+                      "type": "number",
+                      "example": 0
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/posts/{id}": {
